--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,6 @@ set(CMAKE_C_STANDARD 99)
 add_executable(lect08-bmi lect08/bmi.c)
 add_executable(lect08-multiple lect08/multiple.c)
 add_executable(lect08-fizzbuzz lect08/fizzbuzz.c)
+add_executable(lect09-bmi lect09/bmi.c)
+add_executable(lect09-sum lect09/sum.c)
+add_executable(lect09-fizzbuzz lect09/fizzbuzz.c)
