--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ add_executable(lect08-fizzbuzz lect08/fizzbuzz.c)
 add_executable(lect09-bmi lect09/bmi.c)
 add_executable(lect09-sum lect09/sum.c)
 add_executable(lect09-fizzbuzz lect09/fizzbuzz.c)
+add_executable(lect10-bmi lect10/bmi.c)
+add_executable(lect10-bmtictactoe lect10/tictactoe.c)
