--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,6 @@ add_executable(lect09-sum lect09/sum.c)
 add_executable(lect09-fizzbuzz lect09/fizzbuzz.c)
 add_executable(lect10-bmi lect10/bmi.c)
 add_executable(lect10-bmtictactoe lect10/tictactoe.c)
+add_executable(lect11-address lect11/address.c)
+add_executable(lect11-array lect11/array.c)
+add_executable(lect11-swap lect11/swap.c)
