--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,11 @@ add_executable(lect10-bmtictactoe lect10/tictactoe.c)
 add_executable(lect11-address lect11/address.c)
 add_executable(lect11-array lect11/array.c)
 add_executable(lect11-swap lect11/swap.c)
+add_executable(lect12-practice01 lect12/practice01.c)
+add_executable(lect12-practice02 lect12/practice02.c)
+add_executable(lect12-practice03 lect12/practice03.c)
+add_executable(lect12-practice04 lect12/practice04.c)
+add_executable(lect12-practice05 lect12/practice05.c)
+add_executable(lect12-practice06 lect12/practice06.c)
+add_executable(lect12-practice07 lect12/practice07.c)
+add_executable(lect12-practice08 lect12/practice08.c)
