exam: example solution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,9 @@ add_executable(lect12-practice05 lect12/practice05.c)
 add_executable(lect12-practice06 lect12/practice06.c)
 add_executable(lect12-practice07 lect12/practice07.c)
 add_executable(lect12-practice08 lect12/practice08.c)
+add_executable(lect12-exam01 exam/exam01.c)
+add_executable(lect12-exam02 exam/exam02.c)
+add_executable(lect12-exam03 exam/exam03.c)
+add_executable(lect12-exam04 exam/exam04.c)
+add_executable(lect12-exam05 exam/exam05.c)
+add_executable(lect12-exam06 exam/exam06.c)
