--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,9 @@ add_executable(lect12-exam03 exam/exam03.c)
 add_executable(lect12-exam04 exam/exam04.c)
 add_executable(lect12-exam05 exam/exam05.c)
 add_executable(lect12-exam06 exam/exam06.c)
+add_executable(practice-practice09 practice/practice09.c)
+add_executable(practice-practice10 practice/practice10.c)
+add_executable(practice-practice11 practice/practice11.c)
+add_executable(practice-practice12 practice/practice12.c)
+add_executable(practice-practice13 practice/practice13.c)
+add_executable(practice-practice14 practice/practice14.c)
