exam: example solution (07-12)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.12)
 project(lecture2018c C)
 
 set(CMAKE_C_STANDARD 99)
@@ -34,3 +34,9 @@ add_executable(practice-practice11 practice/practice11.c)
 add_executable(practice-practice12 practice/practice12.c)
 add_executable(practice-practice13 practice/practice13.c)
 add_executable(practice-practice14 practice/practice14.c)
+add_executable(exam-exam07 exam/exam07.c)
+add_executable(exam-exam08 exam/exam08.c)
+add_executable(exam-exam09 exam/exam09.c)
+add_executable(exam-exam10 exam/exam10.c)
+add_executable(exam-exam11 exam/exam11.c)
+add_executable(exam-exam12 exam/exam12.c)
